// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> accepts a center prop 1`] = `
<styled.h2
  center={true}
  margin="unset"
  size="1rem"
>
  Title
</styled.h2>
`;

exports[`<Title /> accepts a margin prop 1`] = `
<styled.h2
  center={false}
  margin="0"
  size="1rem"
>
  Title
</styled.h2>
`;

exports[`<Title /> accepts a size prop 1`] = `
<styled.h2
  center={false}
  margin="unset"
  size="10rem"
>
  Title
</styled.h2>
`;

exports[`<Title /> renders correctly 1`] = `
<styled.h2
  center={false}
  margin="unset"
  size="1rem"
>
  Title
</styled.h2>
`;
